--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Passion+One:wght@400;700;900&family=Special+Gothic+Expanded+One&display=swap");
+
 body {
   padding: 0;
   margin: 0;
@@ -13,10 +15,12 @@ header {
   position: fixed;
   top: 0;
   color: white;
+  padding-left: 10px;
+  padding-left: 10px;
 }
 
 .icon {
-  height: 40px;
+  height: 65px;
 }
 
 #social img {
@@ -43,20 +47,24 @@ header {
   align-items: center;
   margin-top: 10vh;
   justify-content: left;
+  font-family: "Special Gothic Expanded One", sans-serif;
 }
 
 .innertext {
   display: flex;
   flex-direction: column;
-  font-size: 80px;
+  font-size: 65px;
+  font-weight: 700;
+  text-transform: uppercase;
   margin-left: 122px;
+  color: white;
 }
 
 .innertext button {
   background: none;
   border-radius: 20px;
-  height: 30%;
-  width: 50%;
+  height: 40px;
+  width: 200px;
   border: 2px solid white;
   font-size: 20px;
   color: white;
@@ -69,6 +77,7 @@ header {
   background: url("https://www.7up.com/images/simple-7up/image2.png");
   width: 100vw;
   height: 90vh;
+  font-family: "Special Gothic Expanded One", sans-serif;
 }
 
 .innersection {
